# m1ddc-tray

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: AppDelegate.mm  ControlWindowController.h  ControlWindowController.mm  DisplayController.h  DisplayController.mm  PresetManager.h  PresetManager.mm  PresetWindowController.h  PresetWindowController.mm  m1ddc_bridge.h  main.mm
resources/: AppIcon.icns  Info.plist.in  generate_icon.swift
